0030198: Regression to 7.1.0: BRepAlgoAPI_Fuse unlimited memory usage

When refining the mesh to achieve required deflection (IntPolyh_Triangle::MultipleMiddleRefinement) limit the number of new triangles to avoid infinite loop.
Test case for the issue.